# agent-bakery

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  image.yml  release.yml
agents/monitoring/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
agents/monitoring/src/monitoring_agent/: __init__.py  __main__.py  api.py  collectors.py  graph.py  scheduler.py  settings.py  store.py
agents/monitoring/tests/: conftest.py  test_agents_meta_sweep.py  test_collectors.py  test_graph.py  test_meta_collectors.py  test_probe_state.py  test_retention.py  test_store.py  test_webhook_auth.py
apps/dashboard/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
apps/dashboard/docs/: Design.md
apps/dashboard/scripts/: mint-admin-token.py  seed-cost-demo.py
apps/dashboard/src/dashboard/: __init__.py  __main__.py  aggregator.py  api.py  auth.py  graph.py  panel_routes.py  pat.py  pat_routes.py  registry.py  settings.py  store.py  views.py
apps/dashboard/src/dashboard/static/: dash.css  tokens.css
apps/dashboard/src/dashboard/templates/: _node_health.html  _workspace_switcher.html  activity.html  agent_detail.html  agents.html  base.html  cost.html  findings.html  incidents.html  login.html  overview.html  pipeline.html  pm.html  privacy.html  qa.html  tokens.html  workspace.html
apps/dashboard/src/dashboard/templates/partials/: _activity_stream.html  action_result.html  activity.html  agent_detail.html  cost.html  findings.html  incidents.html  overview.html  pipeline.html  pm.html  privacy.html  qa.html  token_reveal.html  tokens.html  webext_run_result.html  workspace.html
apps/dashboard/tests/: conftest.py  test_aggregator.py  test_app.py  test_pat.py  test_privacy.py  test_registry_config.py  test_store.py  test_triage_ui.py  test_ui_pages.py  test_views.py
apps/platform-cli/: Dockerfile  README.md  pyproject.toml
apps/platform-cli/src/platform_cli/: __init__.py  __main__.py  compose.py  config.py  doctor.py  registry_cmds.py  token_cmds.py
apps/platform-cli/tests/: test_config_roundtrip.py  test_doctor_skips_batch.py  test_only_dashboard_agents_key_written.py  test_rejects_unknown_feature.py  test_seed_from_default.py  test_token_mint_shells_script.py  test_upsert_replaces_by_slug.py
docs/: README.md  add-your-own-agent.md  agent-standard.md  api.md  architecture.md  business-rules.md  constitution.md  deploy-your-own.md  design-distribution.md  design-platform-cli.md  design-private-mode.md  domain-model.md  functional-decomposition.md  principles.md  roadmap.md  user-stories.md  vision.md
docs/adr/: decisions.md
docs/conventions/: llm.md  tests.md
examples/classifier-agent/: README.md  conftest.py  pyproject.toml
examples/classifier-agent/classifier_agent/: __init__.py  api.py  graph.py  schema.py  settings.py
examples/classifier-agent/tests/: test_api.py  test_graph.py
examples/hello-agent/: README.md  hello_agent.py
infra/: bootstrap.sql  docker-socket-proxy.yml  env.example  nginx-hardening.conf  ollama-tuning.md
infra/backup/: README.md
infra/backup/dumps/: .gitkeep
infra/edge/: Caddyfile  docker-compose.yml
infra/migrations/: 0001_least_privilege_and_partitioning.sql  README.md
