[project]
name = "monitoring-agent"
version = "0.1.0"
description = "Meta-monitoring agent built on agentkit — collects heartbeats/metrics across your agents and raises alerts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "sh00r3k", email = "sh00r3k@gmail.com" }
]
keywords = ["agent", "monitoring", "langgraph", "alerting", "ops"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = [
    "agentkit",
    "langgraph>=0.2.50",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[project.scripts]
monitoring-agent = "monitoring_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitoring_agent"]

[tool.uv.sources]
agentkit = { workspace = true }
