[project]
name = "platform-cli"
version = "0.1.0"
description = "Operator CLI for the agent platform — owns the DASHBOARD_AGENTS registry key, drives the compose lifecycle, mints operator tokens, and health-probes agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "sh00r3k", email = "sh00r3k@gmail.com" }
]
keywords = ["platform", "cli", "operator", "agents", "ops"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
# Depends DOWN on the dashboard's declarative config contract (AgentConfig +
# registry) so the CLI never re-declares the schema; httpx for the doctor probe.
dependencies = [
    "dashboard",
    "httpx>=0.27",
]

[project.scripts]
platform = "platform_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_cli"]

[tool.uv.sources]
dashboard = { workspace = true }
